# agent-policy

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  ROADMAP.md  agent-policy.schema.json  agent-policy.yaml  file-landscape.md  index.html  mkdocs.yml  rustfmt.toml  sitemap.xml  usage-model.md
.clinerules/: default.md
.cursor/rules/: default.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.junie/: guidelines.md
.windsurf/rules/: default.md
architecture/: index.html
compatibility-matrix/: index.html
contributing/: index.html
decisions/: index.html
docs/: README.md  architecture.md  compatibility-matrix.md  contributing.md  decisions.md  getting-started.md  index.md  roadmap.md  roadmap_new.md  schema-reference.md  target-support-policy.md  usage-model.md  vision.md
examples/minimal/: agent-policy.yaml
examples/website/: agent-policy.yaml
getting-started/: index.html
npm/agent-policy/: README.md  package.json
planning/: archive.md  phase-0-bootstrap.md  phase-1-core-model.md  phase-2-generation.md  phase-3-integrity.md  phase-4-release.md  roadmap.md  target-expansion.md
python/: pyproject.toml
reference/targets/: index.html
roadmap/: index.html
schema-reference/: index.html
scripts/: npm-publish.mjs  pypi-publish.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/compatibility-matrix/: index.html
site/contributing/: index.html
site/decisions/: index.html
site/getting-started/: index.html
site/schema-reference/: index.html
site/search/: search_index.json
site/target-support-policy/: index.html
site/usage-model/: index.html
site/vision/: index.html
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: check.rs  generate.rs  import.rs  init.rs  install_hooks.rs  lint.rs  list_targets.rs  mod.rs
src/load/: mod.rs  schema.rs  yaml.rs
src/model/: mod.rs  normalized.rs  policy.rs  targets.rs
src/render/: agents_md.rs  claude_md.rs  clinerules.rs  copilot_instructions.rs  copilot_instructions_scoped.rs  cursor_rules.rs  gemini_md.rs  junie_guidelines.rs  mod.rs  windsurf_rules.rs
src/util/: diff.rs  fs.rs  mod.rs
target-support-policy/: index.html
templates/: AGENTS.md.j2  CLAUDE.md.j2  GEMINI.md.j2  clinerules_default.md.j2  clinerules_role.md.j2  copilot-instructions.md.j2  copilot_instructions_role.md.j2  cursor_role.mdc.j2  cursor_rule.mdc.j2  junie_guidelines.md.j2  windsurf_default.md.j2  windsurf_role.md.j2
tests/: check.rs  cli.rs  golden.rs  schema.rs
tests/snapshots/: golden__all_outputs__.clinerules__default.md.snap  golden__all_outputs__.clinerules__docs_agent.md.snap  golden__all_outputs__.cursor__rules__default.mdc.snap  golden__all_outputs__.cursor__rules__docs_agent.mdc.snap  golden__all_outputs__.github__copilot-instructions.md.snap  golden__all_outputs__.github__instructions__docs_agent.md.snap  golden__all_outputs__.junie__guidelines.md.snap  golden__all_outputs__.windsurf__rules__default.md.snap  golden__all_outputs__.windsurf__rules__docs_agent.md.snap  golden__all_outputs__AGENTS.md.snap  golden__all_outputs__CLAUDE.md.snap  golden__all_outputs__GEMINI.md.snap  golden__minimal__AGENTS.md.snap  golden__no_commands_no_roles__AGENTS.md.snap  golden__website__.clinerules__default.md.snap  golden__website__.clinerules__docs_agent.md.snap  golden__website__.clinerules__frontend_agent.md.snap  golden__website__.cursor__rules__default.mdc.snap  golden__website__.cursor__rules__docs_agent.mdc.snap  golden__website__.cursor__rules__frontend_agent.mdc.snap  golden__website__.github__instructions__docs_agent.md.snap  golden__website__.github__instructions__frontend_agent.md.snap  golden__website__.junie__guidelines.md.snap  golden__website__AGENTS.md.snap  (+4 more)
usage-model/: index.html
vision/: index.html
(+27 files in other folders)
