[package]
name = "agent-policy"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Cameron Brooks <cameron@cameronbrooks.ca>"]
description = "Schema-first generator for coding-agent repo policies and compatibility files."
license = "Apache-2.0"
repository = "https://github.com/CameronBrooks11/agent-policy"
homepage = "https://github.com/CameronBrooks11/agent-policy"
documentation = "https://docs.rs/agent-policy"
readme = "README.md"
keywords = ["agent", "policy", "codegen", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    "planning/",
    ".github/",
    "scratch/",
    "tmp/",
]

[[bin]]
name = "agent-policy"
path = "src/main.rs"

[lib]
name = "agent_policy"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = "0.44"
anyhow = "1"
thiserror = "2"
camino = "1"
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
minijinja = { version = "2", features = ["loader"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
