[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# ---------------------------------------------------------------------------
# Project metadata — canonical source of truth for PyPI.
# Keep `version` in sync with Cargo.toml before each release.
# `scripts/pypi-publish.py` updates this field automatically when run.
# ---------------------------------------------------------------------------

[project]
name = "agent-policy"
version = "0.6.0"
description = "Schema-first generator for coding-agent repo policies and compatibility files."
readme = "../README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Cameron Brooks", email = "cambrooks3393@gmail.com" }]
requires-python = ">=3.8"
keywords = ["agent", "policy", "codegen", "cli", "llm"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage      = "https://github.com/CameronBrooks11/agent-policy"
Repository    = "https://github.com/CameronBrooks11/agent-policy"
Changelog     = "https://github.com/CameronBrooks11/agent-policy/blob/main/CHANGELOG.md"
Documentation = "https://cameronbrooks11.github.io/agent-policy/"

# ---------------------------------------------------------------------------
# maturin configuration — used only for source builds (`pip install .` with
# maturin available). The `scripts/pypi-publish.py` script assembles wheels
# from pre-built cargo-dist release binaries and does NOT invoke maturin.
# ---------------------------------------------------------------------------

[tool.maturin]
bindings     = "bin"
manifest-path = "../Cargo.toml"
